# mamimi

./: .gitignore  Cargo.toml  README.md  mod.rs
src/: alias.rs  arch.rs  cli.rs  command.rs  config.rs  current_python_version.rs  directories.rs  input_version.rs  lib.rs  log.rs  log_level.rs  lts.rs  main.rs  path_ext.rs  python_version.rs  remote_python_index.rs  symlink.rs  system_info.rs  system_version.rs  version_file.rs  version_files.rs
src/archive/: extract.rs  mod.rs  tar_xz.rs  zip.rs
src/commands/: command.rs  completions.rs  global.rs  init.rs  install.rs  install_list.rs  local.rs  mod.rs  uninstall.rs  versions.rs
src/shell/: bash.rs  fish.rs  mod.rs  powershell.rs  shell.rs  zsh.rs
src/shell/infer/: mod.rs  unix.rs  windows.rs
src/shell/windows_command/: cd.cmd  mod.rs
