[package]
name = "mamimi"
version = "0.0.1"
authors = ["Ryosuke NAKATA <nackan2810@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/RyosukeNAKATA/mamimi"
repository = "https://github.com/RyosukeNAKATA/mamimi"
readme = "README.md"

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = { version = "3.0.14", features = ["derive", "env"] }
colored = "2.0.0"
dirs = "4.0.0"
encoding_rs_io = "0.1.7"
indoc = "1.0.3"
itertools = "0.10.3"
log = "0.4.14"
num_cpus = "1.13.1"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
semver = "1.0.4"
serde = "1.0.130"
tar = "0.4.38"
tempfile = "3.2.0"
thiserror = "1.0.30"
url = "2.2.2"
xz2 = "0.1.6"
zip = "0.5.13"

[features]
